# ViberRacing

./: .README.md.kate-swp  .clang-format  .gitignore  .gitmodules  AGENTS.md  ASSETS.md  CLAUDE.md  CMakeLists.txt  INSTRUCTIONS.md  LICENSE  README.md  car_export.json  imgui.ini
.claude/: settings.local.json
assets/cars/parts/: parts.json
assets/cars/parts/body/: body_1.fbx  body_2.fbx
assets/config/: default.json
assets/editor/: editor_styles.json
assets/shaders/: CMakeLists.txt
assets/shaders/src/: fs_atmosphere.sc  fs_basic.glsl  fs_mesh.sc  fs_skybox.sc  fs_textured.glsl  varying.def.sc  vs_atmosphere.sc  vs_basic.glsl  vs_basic.sc  vs_imgui.glsl  vs_mesh.sc  vs_skybox.sc  vs_textured.glsl  vs_textured.sc
cmake/: CompilerOptions.cmake
docs/: ARCHITECTURE.md  NETWORKING.md
src/: CMakeLists.txt  main.cpp
src/assets/: CMakeLists.txt  manager.cpp  manager.hpp  mesh_loader.cpp  mesh_loader.hpp  texture_loader.cpp  texture_loader.hpp
src/core/: CMakeLists.txt  config.cpp  config.hpp  input.cpp  input.hpp  logger.hpp  types.hpp  window.cpp  window.hpp
src/game/: CMakeLists.txt  game.cpp  game.hpp
src/game/entities/: atmosphere.cpp  atmosphere.hpp  car.cpp  car.hpp  car_body.cpp  car_body.hpp  car_damage.cpp  car_damage.hpp  checkpoint.cpp  checkpoint.hpp  ground_plane.cpp  ground_plane.hpp  skybox.cpp  skybox.hpp  track.cpp  track.hpp
src/game/states/: editor_state.cpp  editor_state.hpp  lobby_state.cpp  lobby_state.hpp  menu_state.cpp  menu_state.hpp  null_state.cpp  racing_state.cpp  racing_state.hpp  state.hpp
src/game/track_editor/: editor.cpp  editor.hpp  prop_tool.cpp  prop_tool.hpp  road_tool.cpp  road_tool.hpp  terrain_tool.cpp  terrain_tool.hpp
src/networking/: CMakeLists.txt  network.cpp  network.hpp  p2p_client.cpp  p2p_client.hpp  p2p_host.cpp  p2p_host.hpp  sync.cpp  sync.hpp
src/physics/: CMakeLists.txt  collision.hpp  tire_model.cpp  tire_model.hpp  vehicle.cpp  vehicle.hpp  world.cpp  world.hpp
src/renderer/: CMakeLists.txt  camera.cpp  camera.hpp  debug_draw.cpp  debug_draw.hpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/renderer/shaders/: embedded_shaders.cpp  embedded_shaders.hpp
src/renderer/ui/: imgui_renderer.cpp  imgui_renderer.hpp
src/utils/: CMakeLists.txt  math.hpp  profiler.cpp  profiler.hpp  serialization.hpp  spline.cpp  spline.hpp
tests/integration/: CMakeLists.txt  test_physics_world.cpp
tests/unit/: CMakeLists.txt  test_math.cpp  test_serialization.cpp  test_spline.cpp
tools/: compile_shaders.py  compile_shaders.sh  pack_glsl_shaders.py
tools/car_editor/: CMakeLists.txt  editor_state.cpp  editor_state.hpp  editor_style.cpp  editor_style.hpp  editor_ui.cpp  editor_ui.hpp  main.cpp
